[workspace]
resolver = "2"
members = ["hexarch"]
default-members = ["hexarch"]

[workspace.package]
description = "A hexagon architecture package"
readme = "README.md"
homepage = "https://hexarch.github.io"
repository = "https://github.com/sbeardsley/hexarch"
keywords = ["hexagon", "architecture", "clean"]
rust-version = "1.78"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["github.com/sbeardsley"]
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]

[workspace.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
